--- a/force-app/main/default/classes/StudyActions.cls
+++ b/force-app/main/default/classes/StudyActions.cls
@@ -155,7 +155,7 @@ public abstract class StudyActions {
         isStudyTCAccepted = isTCAccepted(study.Id);
         studyAccessLevel = DelegateService.getStudyAccessLevel(study.Id, userMode);
 
-        isTCAcceptanceRequired = study.Terms_And_Conditions_ID__c != null && !isStudyTCAccepted;
+        isTCAcceptanceRequired = study.Terms_And_Conditions_ID__c != null && isStudyTCAccepted!= null && !isStudyTCAccepted;
 
 
         //init common reasons:
