PEH-421. Clean Up Story: 6) Add 2 fields to 3rd Party video display screen if video is from HealthDay.

--- a/force-app/main/default/classes/ResourceService.cls
+++ b/force-app/main/default/classes/ResourceService.cls
@@ -337,6 +337,11 @@ public with sharing class ResourceService {
                     } else {
                         bodyFieldWrappers.add(new ResourceFieldWrapper(fieldApi.Field_Api_Name__c, valueField, fieldApi.CSS_Class_Name__c));
                     }
+                } else if ('Byline__c'.equalsIgnoreCase(fieldApi.Field_Api_Name__c)) {
+                    valueField = resource.get('Author_s_Name__c');
+                    if (valueField != null) {
+                        bodyFieldWrappers.add(new ResourceFieldWrapper('Author_s_Name__c', valueField, fieldApi.CSS_Class_Name__c));
+                    }
                 }
             }
         }
