--- a/force-app/main/default/classes/ConditionOfInterestRemote.cls
+++ b/force-app/main/default/classes/ConditionOfInterestRemote.cls
@@ -3,16 +3,16 @@
  */
 
 public with sharing class ConditionOfInterestRemote {
-    public static final String COI = 'Condition_of_Interests';
 
     @AuraEnabled
-    public static List<ConditionOfInterestRemote.CAWrapper> getConditionOfInterest() {
+    public static List<TherapeuticAreaService.CAWrapper> getConditionOfInterest() {
         try {
-            Participant__c participant = getParticipant();
-            List<ConditionOfInterestRemote.CAWrapper> caWrappers = new List<ConditionOfInterestRemote.CAWrapper>();
+            TherapeuticAreaService taService = (TherapeuticAreaService) ClassFactory.newInstance(TherapeuticAreaService.class);
+            Participant__c participant = taService.getParticipant();
+            List<TherapeuticAreaService.CAWrapper> caWrappers = new List<TherapeuticAreaService.CAWrapper>();
             if (!participant.Therapeutic_Area_Patients__r.isEmpty()) {
                 for (Therapeutic_Area_Patient__c coi : participant.Therapeutic_Area_Patients__r) {
-                    ConditionOfInterestRemote.CAWrapper caWrapper = new ConditionOfInterestRemote.CAWrapper ();
+                    TherapeuticAreaService.CAWrapper caWrapper = new TherapeuticAreaService.CAWrapper ();
                     caWrapper.isSelected = true;
                     caWrapper.coi = coi;
                     caWrappers.add(caWrapper);
@@ -44,29 +44,4 @@ public with sharing class ConditionOfInterestRemote {
             AuraHelper.throwException(e);
         }
     }
-
-    private static Participant__c getParticipant() {
-        DatabaseProxy databaseProxy = (DatabaseProxy) ClassFactory.newInstance(DatabaseProxy.class);
-        CommunityService cService = (CommunityService) ClassFactory.newInstance(CommunityService.class);
-        String participantId = cService.getParticipantId();
-        String participantQuery =
-                'SELECT Id, ' +
-                        'Conditions__c, ' +
-                        '(SELECT Id, Therapeutic_Area__c, Therapeutic_Area__r.Name, Therapeutic_Area__r.RecordType.DeveloperName, IsRelatedToStudy__c, Condition_Of_Interest_Order__c ' +
-                        'FROM Therapeutic_Area_Patients__r ' +
-                        'WHERE Condition_Of_Interest_Order__c > 0 ' +
-                        'AND Therapeutic_Area__r.RecordType.DeveloperName = \'' + COI + '\' ' +
-                        'ORDER BY Condition_Of_Interest_Order__c) ' +
-                        'FROM Participant__c ' +
-                        'WHERE Id = \'' + participantId + '\'';
-        return ((List<Participant__c>) databaseProxy.query(participantQuery))[0];
-    }
-
-    public class CAWrapper {
-        @AuraEnabled
-        public Boolean isSelected;
-        @AuraEnabled
-        public Therapeutic_Area_Patient__c coi;
-    }
-
 }
