--- a/force-app/main/default/classes/TherapeuticAreaService.cls
+++ b/force-app/main/default/classes/TherapeuticAreaService.cls
@@ -2,6 +2,7 @@
  * Created by Yehor Dobrovolskyi
  */
 public with sharing class TherapeuticAreaService {
+    public static final String COI = 'Condition_of_Interests';
 
     public Set<String> getTANamesOnResource(Resource__c resource) {
         Set<String> tANames = new Set<String>();
@@ -43,5 +44,64 @@ public with sharing class TherapeuticAreaService {
             therapeuticAreas.addAll(this.createTAsByNames(tANames));
         }
         return therapeuticAreas;
+    }
+
+    public List<TherapeuticAreaService.CAWrapper> getCOIWrappers(List<Therapeutic_Area__c> therapeuticAreas) {
+        List<TherapeuticAreaService.CAWrapper> caWrappers = new List<TherapeuticAreaService.CAWrapper>();
+        CommunityService cService = (CommunityService) ClassFactory.newInstance(CommunityService.class);
+        String participantId = cService.getParticipantId();
+        for (Therapeutic_Area__c areaPatient : therapeuticAreas) {
+            TherapeuticAreaService.CAWrapper caWrapper = new TherapeuticAreaService.CAWrapper ();
+            caWrapper.isSelected = false;
+            caWrapper.coi = new Therapeutic_Area_Patient__c(
+                    Participant__c = participantId,
+                    Therapeutic_Area__c = areaPatient.Id,
+                    Therapeutic_Area__r = areaPatient,
+                    Condition_Of_Interest_Order__c = 100
+            );
+            caWrappers.add(caWrapper);
+        }
+        return caWrappers;
+    }
+
+    public List<Therapeutic_Area__c> getTherapeuticAreas(String nameTA) {
+        DatabaseProxy databaseProxy = (DatabaseProxy) ClassFactory.newInstance(DatabaseProxy.class);
+        String whereClause = '';
+        if (!String.isBlank(nameTA)) {
+            whereClause = 'AND Name LIKE \'%' + String.escapeSingleQuotes(nameTA) + '%\' ';
+        }
+        String tAQuery =
+                'SELECT Id, ' +
+                        'Name ' +
+                        'FROM Therapeutic_Area__c ' +
+                        'WHERE RecordType.DeveloperName = \'' + TherapeuticAreaService.COI + '\' ' +
+                        whereClause +
+                        'LIMIT 5';
+
+        return (List<Therapeutic_Area__c>) databaseProxy.query(tAQuery);
+    }
+
+    public Participant__c getParticipant() {
+        DatabaseProxy databaseProxy = (DatabaseProxy) ClassFactory.newInstance(DatabaseProxy.class);
+        CommunityService cService = (CommunityService) ClassFactory.newInstance(CommunityService.class);
+        String participantId = cService.getParticipantId();
+        String participantQuery =
+                'SELECT Id, ' +
+                        'Conditions__c, ' +
+                        '(SELECT Id, Therapeutic_Area__c, Therapeutic_Area__r.Name, Therapeutic_Area__r.RecordType.DeveloperName, IsRelatedToStudy__c, Condition_Of_Interest_Order__c ' +
+                        'FROM Therapeutic_Area_Patients__r ' +
+                        'WHERE Condition_Of_Interest_Order__c > 0 ' +
+                        'AND Therapeutic_Area__r.RecordType.DeveloperName = \'' + TherapeuticAreaService.COI + '\' ' +
+                        'ORDER BY Condition_Of_Interest_Order__c) ' +
+                        'FROM Participant__c ' +
+                        'WHERE Id = \'' + participantId + '\'';
+        return ((List<Participant__c>) databaseProxy.query(participantQuery))[0];
+    }
+
+    public class CAWrapper {
+        @AuraEnabled
+        public Boolean isSelected;
+        @AuraEnabled
+        public Therapeutic_Area_Patient__c coi;
     }
 }
